--- a/main.css
+++ b/main.css
@@ -3,10 +3,9 @@ body {
     color: white;
 }
 .container {
-    max-width: 100%;
-}
-.card-header {
-    text-align: center;
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
 }
 .nav-link {
     color: white;
@@ -16,23 +15,93 @@ header {
     background-color: rgb(33, 37, 41);
     color: white;
     margin-bottom: 20px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .card {
-    height: 650px;
-    max-height: 100%;
+    max-height: 600px;
+    height: 100%;
+    padding: 5px;
 }
+.card img {
+    max-height: 180px;
+    height: 100%;
+
+}
+.card-header {
+    text-align: center;
+}
+.card-body {
+    height: 100%;
+}
+.card-body a {
+    margin: 2px 95px;
+}
+
 section {
-    height: 100vh;
-    padding-top: 70px;
+    max-height: 800px;
+    height: 100%;
+    padding: 70px 0;
 }
 section h1 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    text-align: center;
 }
 .carousel-item{
     height: 650px;
 }
 .carousel-item img{
     height: 100%;
+}
+
+@media screen and (max-width: 767px)  {
+    .container {
+        max-width: 85%;
+        margin: 0 auto;
+    }
+    .card {
+        max-height: 95%;
+        margin-bottom: 5px;
+    }
+    .card img {
+        height: 90%;
+    }
+    .card-body {
+        height: 90%;
+    }
+    .card-body a {
+        margin: 2px auto;
+    }
+
+    section {
+        margin: 10px auto;
+        height: 450px;
+        padding: 30px 5px;
+
+    }
+    section h1 {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .carousel-item{
+        max-width: 100%;
+        height: 400px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .container {
+        max-width: 95%;
+    }
+    .card {
+        max-height: 95%;
+        margin-bottom: 10px;
+    }
+    .card-body a {
+        margin: auto auto;
+    }
 }
 
